--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-image: url(http://neighborsmovingseattle.com/wp-content/uploads/2017/07/lawncare-header-1.jpg);
-    background-size: 3050px;
+    background-image: url(https://thompson-landscape.com/wp-content/uploads/2014/04/lawn-care-plano-tx.jpg);
+    background-size: 1900px;
 }
 
 .navbar-brand {
@@ -9,18 +9,15 @@ body {
     color: green !important;
 }
 
-.banner {
-    font-family: 'Shrikhand', cursive;
-    color: white;
-    font-size: 55px !important;
+.navbar-text {
+  display: flex;
+  
 }
 
 #reviews {
     color: white;
     font-size: 15px;
 }
-
-
 
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -61,8 +58,7 @@ img {vertical-align: middle;}
 }
 
 /* Caption text */
-.text {
-  font-family: 'Anton', sans-serif;
+.captionText {
   color: #f2f2f2;
   background-color: rgba(0, 0, 0, 0.658);
   font-size: 15px;
@@ -73,14 +69,13 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
+/* #ourContact{ 
+  background-color: #c2c2c2;
+  width: 80%;
+  height: 260px;
+  border-radius: 5%;
+  text-align: center
+} */
 
 /* The dots/bullets/indicators */
 .dot {
@@ -92,6 +87,14 @@ img {vertical-align: middle;}
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+}
+
+.callout-text {
+  font-family: 'Shrikhand', cursive;
+  color: #000000;
+  font-size: 35px;
+  position: relative;
+  top: 100px;
 }
 
 .active, .dot:hover {
